--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
             <div class="d-flex justify-content-center lead">
                 <p class="mt-3 w-50">
                     I am passionate about my work. Because I love what I do, I have a steady source of
-                    motivation that drives me to do my best. I like to read novels, play video games & chess. I also like to sketch.</p>
+                    motivation that drives me to do my best. I like to read novels, play video games & chess. I also
+                    like to sketch.</p>
             </div>
             <div class="h2">
                 <a href="https://github.com/pradhuman-suner" target="blank" class="link-icon"><i
@@ -119,18 +120,18 @@
                 <div class="card bg-dark text-white-50">
                     <img src="./images/porject.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Procurement Application</h5>
+                        <p class="card-text">This is procurement web application i made using angular and spring boot.
+                        </p>
+                        <p class="card-text">👥 User Module - 1. Can See Product List 2. Add To Cart 3. Logout 4. Login
+                            5. Register 6. See Cart Page 7. Place Order 8. Get Mail With Invoice 📧 9. User Profile Page
+                            👤 Admin Module - 1. Add, Update, Delete Products 2. See Product List 3. See and Delete All
+                            Users 4. Logout</p>
                         <div class="h4">
-                            <a href="https://github.com/pradhuman-suner" target="blank" class="link-icon-white"><i
-                                    class="fab fa-github"></i></a>
-                            <a href="https://leosoft-games.itch.io/" target="blank" class="link-icon-white"><i
-                                    class="fab fa-itch-io"></i></a>
-                            <a href="https://www.linkedin.com/in/pradhuman-suner/" target="blank"
-                                class="link-icon-white"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://www.instagram.com/leo_pradhuman/" target="blank" class="link-icon-white"><i
-                                    class="fab fa-instagram"></i></a>
+                            <a href="https://github.com/pradhuman-suner/Procurement-Application" target="blank"
+                                class="link-icon-white"><i class="fab fa-github"></i></a>
+                            <!-- <a href="https://leosoft-games.itch.io/" target="blank" class="link-icon-white"><i
+                                    class="fab fa-itch-io"></i></a> -->
                         </div>
                     </div>
                 </div>
