added Procurement Project

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                         </p>
                         <p class="card-text">👥 User Module - 1. Can See Product List 2. Add To Cart 3. Logout 4. Login
                             5. Register 6. See Cart Page 7. Place Order 8. Get Mail With Invoice 📧 9. User Profile Page
-                            👤 Admin Module - 1. Add, Update, Delete Products 2. See Product List 3. See and Delete All
+                        </p>
+                        <p> 👤 Admin Module - 1. Add, Update, Delete Products 2. See Product List 3. See and Delete All
                             Users 4. Logout</p>
                         <div class="h4">
                             <a href="https://github.com/pradhuman-suner/Procurement-Application" target="blank"
