added orbital loop Project

--- a/index.html
+++ b/index.html
@@ -117,17 +117,14 @@
         </div>
         <div class="row row-cols-3 row-cols-md-3 g-5">
             <div class="col">
-                <div class="card bg-dark text-white-50">
-                    <img src="./images/porject.png" class="card-img-top" alt="...">
+                <div class="card bg-dark text-white-50" >
+                    <img src="./images/procurement.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Procurement Application</h5>
-                        <p class="card-text">This is procurement web application i made using angular and spring boot.
+                        <p class="card-text">Angular and Spring Boot Web Application</p>
+                        <p class="card-text small">This is procurement web application i made using angular and spring
+                            boot. 
                         </p>
-                        <p class="card-text">👥 User Module - 1. Can See Product List 2. Add To Cart 3. Logout 4. Login
-                            5. Register 6. See Cart Page 7. Place Order 8. Get Mail With Invoice 📧 9. User Profile Page
-                        </p>
-                        <p> 👤 Admin Module - 1. Add, Update, Delete Products 2. See Product List 3. See and Delete All
-                            Users 4. Logout</p>
                         <div class="h4">
                             <a href="https://github.com/pradhuman-suner/Procurement-Application" target="blank"
                                 class="link-icon-white"><i class="fab fa-github"></i></a>
@@ -138,55 +135,23 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card bg-dark text-white-50">
-                    <img src="./images/porject.png" class="card-img-top" alt="...">
+                <div class="card bg-dark text-white-50" >
+                    <img src="./images/orbital-loop.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Orbital Loop</h5>
+                        <p class="card-text">A Game Created For Ludum Dare 47</p>
+                        <p class="card-text small">This game is about a asteroid which is rotation around a point you have to save it form colliding with asteroids and get between the gap.
+                        </p>
+                        <div class="h4">
+                            <a href="https://leosoft-games.itch.io/orbital-loop" target="blank"
+                                class="link-icon-white"><i class="fab fa-itch-io"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card bg-dark text-white-50">
-                    <img src="./images/porject.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card bg-dark text-white-50">
-                    <img src="./images/porject.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card bg-dark text-white-50">
-                    <img src="./images/porject.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card bg-dark text-white-50">
-                    <img src="./images/porject.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
+
+
+
         </div>
         <div class="text-center my-5">
             <p class="mt-5 fst-italic h5">
