added orbital loop Project

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
         </div>
         <div class="row row-cols-3 row-cols-md-3 g-5">
             <div class="col">
-                <div class="card bg-dark text-white-50" >
+                <div class="card bg-dark text-white-50">
                     <img src="./images/procurement.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Procurement Application</h5>
                         <p class="card-text">Angular and Spring Boot Web Application</p>
                         <p class="card-text small">This is procurement web application i made using angular and spring
-                            boot. 
+                            boot.
                         </p>
                         <div class="h4">
                             <a href="https://github.com/pradhuman-suner/Procurement-Application" target="blank"
@@ -135,12 +135,13 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card bg-dark text-white-50" >
+                <div class="card bg-dark text-white-50">
                     <img src="./images/orbital-loop.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Orbital Loop</h5>
                         <p class="card-text">A Game Created For Ludum Dare 47</p>
-                        <p class="card-text small">This game is about a asteroid which is rotation around a point you have to save it form colliding with asteroids and get between the gap.
+                        <p class="card-text small">This game is about a asteroid which is rotation around a point you
+                            have to save it form colliding with asteroids and get between the gap.
                         </p>
                         <div class="h4">
                             <a href="https://leosoft-games.itch.io/orbital-loop" target="blank"
@@ -149,10 +150,28 @@
                     </div>
                 </div>
             </div>
-
-
-
+            <div class="col">
+                <div class="card bg-dark text-white-50">
+                    <img src="./images/pong.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Pong Game</h5>
+                        <p class="card-text">A 2D Game Made using lua and love2d</p>
+                        <p class="card-text small">Pong is a two-dimensional sports game that simulates table tennis.
+                            The player controls an in-game paddle by moving it vertically across the left or right side
+                            of the screen. ... The goal is for each player to reach 10 points before the opponent;
+                            points are earned when one fails to return the ball to the other.
+                        </p>
+                        <div class="h4">
+                            <a href="https://docs.google.com/document/d/14zzhDyRC2cYJwJRQXi6jCiR2P1rYUD5NPHxUp4WwWCk/edit"
+                                target="blank" class="link-icon-white"><i class="far fa-file"></i></a>
+                            <a href="https://drive.google.com/drive/folders/13n-gr5dXwpx903xOnwGnJygXyWWg1qAs"
+                                target="blank" class="link-icon-white"><i class="fab fa-google-drive"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
         <div class="text-center my-5">
             <p class="mt-5 fst-italic h5">
                 "Work gives you meaning and purpose and life is empty without it."
