added orbital loop Project

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="row row-cols-3 row-cols-md-3 g-5">
             <div class="col">
                 <div class="card bg-dark text-white-50">
-                    <img src="./images/procurement.png" class="card-img-top" alt="...">
+                    <img src="./images/procurement-alt.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Procurement Application</h5>
                         <p class="card-text">Angular and Spring Boot Web Application</p>
