added orbital loop Project

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="mb-5 text-center">
             <h2 class=" fw-normal">PROJECTS</h2>
         </div>
-        <div class="row row-cols-3 row-cols-md-3 g-5">
+        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-1 g-5">
             <div class="col">
                 <div class="card bg-dark text-white-50">
                     <img src="./images/procurement-alt.png" class="card-img-top" alt="...">
@@ -381,23 +381,23 @@
         <div class="container bg-dark text-white-50">
             <footer class="py-5 bg-dark text-white-50">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-12 col-md-6 col-lg-4 text-md-start text-center mt-5">
                         <h5>Contact</h5>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-center justify-content-md-start">
                             <i class="fas fa-home my-1"></i>
                             <p class="mx-3">4, Bistan Road, Khargone (M.P.) <br> Pincode - 451001</p>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-center justify-content-md-start">
                             <i class="fas fa-envelope my-1"></i>
                             <p class="mx-3">pradhumansuner5@gmail.com</p>
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-center justify-content-md-start">
                             <i class="fas fa-phone my-1"></i>
                             <p class="mx-3">9109585122</p>
                         </div>
                     </div>
 
-                    <div class="col-4">
+                    <div class="col-12 col-md-6 col-lg-4 text-md-start text-center mt-5">
                         <h5>Quick Links</h5>
                         <ul class="nav flex-column">
                             <li class="nav-item mb-2"><a href="#about-nav" class="nav-link p-0 text-muted">About</a>
@@ -413,7 +413,7 @@
 
 
 
-                    <div class="col-4">
+                    <div class="col-12 col-md-12 col-lg-4 text-md-start text-center d-flex justify-content-center mt-5">
                         <form>
                             <h5 class="mx-3 ">Social</h5>
                             <ul class="display-3 list-unstyled d-flex">
