--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="mb-5 text-center">
             <h2 class=" fw-normal">PROJECTS</h2>
         </div>
-        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-1 g-5">
+        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-1 g-5 w-100 mx-0">
             <div class="col">
                 <div class="card bg-dark text-white-50">
                     <img src="./images/procurement-alt.png" class="card-img-top" alt="...">
@@ -172,7 +172,7 @@
             </div>
         </div>
 
-        <div class="text-center my-5">
+        <div class="text-center my-5 w-100">
             <p class="mt-5 fst-italic h5">
                 "Work gives you meaning and purpose and life is empty without it."
             </p>
@@ -191,7 +191,7 @@
             <h2 class="fw-normal">SKILLS</h2>
         </div>
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-5 py-5">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-5 py-5 w-100 mx-0">
             <div class="col d-flex align-items-start">
                 <i class="custom-icon fab fa-java h2"></i>
                 <div class="w-100">
