--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
             <div class="h2">
                 <a href="https://github.com/pradhuman-suner" target="blank" class="link-icon"><i
                         class="fab fa-github"></i></a>
+                <a href="https://trailblazer.me/id/pradhumansuner" target="blank" class="link-icon"><i
+                        class="fa-brands fa-salesforce"></i></a>
                 <a href="https://leosoft-games.itch.io/" target="blank" class="link-icon"><i
                         class="fab fa-itch-io"></i></a>
                 <a href="https://www.linkedin.com/in/pradhuman-suner/" target="blank" class="link-icon"><i
