Font Awsome Kit added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="./fontawesome/css/all.css" rel="stylesheet">
     <link href="./css/index.css" rel="stylesheet">
-
+   
     <!-- -------------------------------------------------------------------------------------------------- -->
 
 </head>
@@ -451,6 +451,9 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script defer src="/your-path-to-fontawesome/js/all.js"></script>
+     <!-- Font Awsome -->
+    <script src="https://kit.fontawesome.com/c97d50fed7.js" crossorigin="anonymous"></script>
+
 
 </body>
 
