--- a/index.html
+++ b/index.html
@@ -422,6 +422,8 @@
                                 <li class="mx-3"><a class="link-icon-white" href="https://github.com/pradhuman-suner"
                                         target="blank"><i class="fab fa-github"></i></a>
                                 </li>
+                                <li class="mx-3"><a class="link-icon-white" href="https://trailblazer.me/id/pradhumansuner" target="blank"><i class="fa-brands fa-salesforce"></i></a>
+                                </li>
                                 <li class="mx-3"><a class="link-icon-white"
                                         href="https://www.instagram.com/leo_pradhuman/" target="blank"><i
                                             class="fab fa-instagram"></i></a></li>
@@ -450,7 +452,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script defer src="/your-path-to-fontawesome/js/all.js"></script>
      <!-- Font Awsome -->
     <script src="https://kit.fontawesome.com/c97d50fed7.js" crossorigin="anonymous"></script>
 
