--- a/index.html
+++ b/index.html
@@ -41,14 +41,12 @@
         </nav>
     </div>
 
-   <!-- Site Old -->
-    <div class="container-fluid bg-dark stick-nav " style="z-index: 50;">
-        <p>This portfolio is outdated. Please visit my new and improved portfolio for the latest information.</p>
-        <a href="www.linkedin.com/in/pradhuman-suner"> New Site </a>
-    </div>
-
     <!-- Sticky Header With Nav Bar -->
     <div class="container-fluid bg-dark stick-nav " style="z-index: 50;">
+            <div>   <p>This portfolio is outdated. Please visit my new and improved portfolio for the latest information.</p>
+        <a href="www.linkedin.com/in/pradhuman-suner"> New Site </a>
+            </div>
+            
         <nav class="navbar navbar-dark bg-dark justify-content-center">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
