--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="justify-content-center text-center"> 
             <p class="margin-0">This portfolio is outdated. Please visit my <a style="color: yellow;
                 text-decoration: none;
-                font-weight: 700;" href="www.linkedin.com/in/pradhuman-suner">Site</a> and improved portfolio for the latest information.</p>
+                font-weight: 700;" href="https://www.linkedin.com/in/pradhuman-suner">Site</a> and improved portfolio for the latest information.</p>
         </div>
         </div>
     <!-- Header  -->
